<resources>
    <string name="app_name">Konnect</string>

    <!--Credential Keys-->
    <string name="web_client_key">425565786475-vsguqn06s9np5o1avsiqgoe81asn5qh2.apps.googleusercontent.com</string>

    <!--Button Text-->
    <string name="register_button">Register</string>
    <string name="sign_in_button">Already A User</string>
    <string name="sign_in_button_google">Start With Google</string>
    <string name="sign_in_button_email">Start With Email</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="vote_button">Vote</string>
    <string name="resolve_button">Resolve</string>
    <string name="delete_button">Delete</string>

    <!--NavBar-->
    <string name="meeting_conf">Finalized Meetings</string>
    <string name="meeting_unconf">Pending Meetings</string>
    <string name="nav_button_next">Next</string>
    <string name="title_create_meeting">Create Meeting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="find_meeting">Find a Meeting</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_button_save">Save</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_shortlist">Shortlist</string>

    <!--Titles-->
    <string name="title_search">Search</string>
    <string name="title_main">Konnect</string>
    <string name="title_default_user">Default User</string>
    <string name="title_placepicker_activity">Select a Place</string>
    <string name="title_description">Event Details</string>
    <string name="title_time">Select Some Potential Times</string>
    <string name="title_place">Select Some Potential Places</string>
    <string name="title_invite">Invite People</string>
    <string name="title_find_people">Find People</string>
    <string name="title_date">Select a Date</string>
    <string name="title_start">Select Start Time</string>
    <string name="title_end">Select End Time</string>
    <string name="title_temp_user">User</string>

    <!--Hints & Prompts-->
    <string name="hint_invite_code">Enter Invite Code Here</string>
    <string name="hint_find_email">Enter an email address</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="title_empty">There doesn\'t seem to be anything here.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="prompt_email_sign_in">Enter Email and Password</string>
    <string name="prompt_save">You have made changes. Do you wish to save them?</string>

    <!--Toasts-->
    <string name="toast_failed_login">Failed to login!</string>
    <string name="toast_empty_field">Cannot continue! Invalid fields!</string>
    <string name="toast_add_success">Added Successfully</string>
    <string name="toast_add_fail">Failed To Find Meeting</string>
    <string name="toast_resolve_vote_success">Successfully Resolved! Find this in Finalized Meetings!</string>
    <string name="toast_empty_selection">Cannot have empty selection!</string>
    <string name="toast_invalid_time">Invalid time selection! Please try again!</string>
    <string name="toast_no_user_added">Error. Could not find user.</string>
    <string name="toast_user_added">Successfully added user.</string>
    <string name="toast_no_location_enabled">Please enable location to optimize the use of this location picker</string>
    <string name="toast_def_error">Sorry! Something went wrong&#8230;</string>

    <!--Intent Messages-->
    <string name="intent_def_msg">Hey! I\'m inviting you to a meet up. Use the MeetUp app and enter this invite code! -> </string>
    <string name="intent_def_title">MeetUp Invite ID</string>

    <!--Divider Texts-->
    <string name="divider_places">List of Possible Places</string>
    <string name="divider_times">List of Possible Times</string>

    <!--Misc-->
    <string name="def_user_name">Trial User</string>

</resources>
