<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:id="@+id/fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meetings_confirmed"
            android:icon="@drawable/ic_meeting"
            android:title="@string/meeting_conf"/>
        <item
            android:id="@+id/nav_meetings_unconfirmed"
            android:icon="@drawable/ic_notifications_active"
            android:title="@string/meeting_unconf"/>
        
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
    </group>

    <group
        android:id="@+id/actions"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_find_meeting"
            android:icon="@drawable/places_ic_search"
            android:iconTint="@color/primary_text"
            android:title="@string/find_meeting"/>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/sign_out"/>
    </group>

</menu>
